--- a/templates/pages/swatshareresource.html
+++ b/templates/pages/swatshareresource.html
@@ -8,7 +8,7 @@
 <br>
 <br>
 <div align='left'>
-<iframe src="https://swatshare.rcac.purdue.edu/tool/SWATViewer.html" frameborder="0" scrolling="no" width="1200" height="768">
+<iframe src="https://swatshare.rcac.purdue.edu/hydroshare/SWATViewer.html" frameborder="0" scrolling="no" width="1200" height="768">
 </iframe> 
 </div>
 {% endblock %}
